--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "cleanup": "node scripts/cleanup.mjs"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.4",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -28,6 +31,9 @@
     "react-share": "^5.1.2",
     "react-toastify": "^11.0.2",
     "sanity": "^3.68.3",
+    "shipengine": "^1.0.7",
+    "shippo": "^2.15.0",
+    "stripe": "^17.6.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
