--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
+    "nanoid": "^5.0.9",
     "next": "^14.2.23",
     "next-sanity": "^9.8.30",
     "react": "^18",
