--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "vaul": "^1.1.1",
     "zod": "^3.24.1"
   },
